# noobwerkz-engine

./: '  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMMENTARY.md  LICENSE.md  README  README.md  VERSION
engine/: CMakeLists.txt  EngineDesktop.cpp  HunterGate.cmake  c  clean  droid  get_libs.sh  hlister  main.cpp  main.old.cpp  sandbox  setup.sh  torque6-to-noobwerkz  upload
engine/android/: AndroidManifest.xml
engine/android/assets/: Test.txt
engine/android/jni/: Android.mk
engine/cmake/: Assimp.cmake  BStr.cmake  BaseUtils.cmake  Bullet.cmake  EtcLib.cmake  FreeType.cmake  Harfbuzz.cmake  Ogg.cmake  Ozz.cmake  R8.cmake  README.md  Recast.cmake  Shiny.cmake  Sqlite.cmake  TextureAtlas.cmake  UTF8.cmake  Vorbis.cmake  Voropp.cmake
engine/cmake/gles/: CMakeLists.txt
engine/common/: '  2  :w  ACtiveMeshNG.hpp  ActiveMesh.cpp  ActiveMesh.hpp  ActiveMeshNG.cpp  ActiveMeshNG.hpp  Actor.cpp  Actor.hpp  ActorBlueprints.hpp  ActorFactory.hpp  AnimatedModel.cpp  AnimatedModel.hpp  AppState.h  Application.cpp  Application.hpp  ApplicationModes.hpp  Armature.cpp  Armature.hpp  Assembly.cpp  Assembly.hpp  AssimpUtil.hpp  Attrib.hpp  AudioSample.cpp  AudioSample.hpp  AudioSampleOld.hpp  AutomaticBuilding.hpp  BSPTree.cpp  BSPTree.hpp  BasicMesh.cpp  BasicMesh.hpp  BasicModel.cpp  BasicModel.hpp  BehaviourTree.hpp  BillboardModel.hpp  BinPacker.cpp  BinPacker.hpp  Body.cpp  Body.hpp  (+265 more)
engine/common/Drawing/: BasicRenderer.cpp  BasicRenderer.hpp  GUIRenderer.cpp  GUIRenderer.hpp  HACDRenderer.cpp  HACDRenderer.hpp  TriplanarGradientMap.cpp  TriplanarGradientMap.hpp  cube_atlas.cpp
engine/common/Physics/: CharacterController.cpp  CharacterController.hpp  ClosestNotMeRaycastCallback.hpp  DebugDraw.cpp  DebugDraw.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsConstraintGeneric.hpp  PhysicsShape.cpp  PhysicsShape.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
engine/common/Physics.old/: CharacterController.cpp  CharacterController.hpp  DebugDraw.cpp  DebugDraw.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsConstraintGeneric.cpp  PhysicsShape.cpp  PhysicsShape.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
engine/common/bgfx_related/: Shaders.cpp  Shaders.hpp  bgfx_utils.cpp  bgfx_utils.h  cube_atlas.h
engine/common/bgfx_related_rough/: cube_atlas.cpp
engine/common/drawing/: BasicRenderer.cpp  BasicRenderer.hpp  Drawable.hpp  Drawable2D.cpp  Drawable2D.hpp  HACDRenderer.cpp  HACDRenderer.hpp  OverlayRenderer.hpp  RendererBase.hpp  Shaders.cpp  Shaders.hpp  TriplanarGradientMap.cpp  TriplanarGradientMap.hpp  TriplanarGradientMapLit.cpp  TriplanarGradientMapLit.hpp
engine/common/drawing_techniques/: GUIRenderer.cpp  GUIRenderer.hpp  HACDRenderer.cpp  HACDRenderer.hpp  Shape2DRenderer.hpp  TriPlanar.cpp  TriPlanar.hpp
engine/common/experimental/: AtomicCounter.hpp  GameView.cpp  GameView.hpp  IntrusiveReferenceCountingFunctions.hpp  LambdaCallback.hpp  Shape2D.cpp  Shape2D.hpp  StringIndex.hpp  View.hpp
engine/common/font/: font_manager.cpp  font_manager.h
engine/common/physics/: Physics.cpp  Physics.hpp
engine/common/scrapyard/: :w  Actor.cpp  Actor.hpp  BehaviourTree.cpp  Drawable.hpp  Drawable2D.cpp  Drawable3D.cpp  Mesh.cpp  Mesh.hpp  PhysicsContacts.hpp  Prop.cpp  Prop.hpp  SandboxApp.cpp  Scenery.cpp  Scenery.hpp  Stage.cpp.old  Stage.hpp.old
engine/common/scripting/: AngelVector.hpp  RegisterActiveMesh.cpp  RegisterActiveMesh.hpp  RegisterActor.cpp  RegisterActor.hpp  RegisterBasicMesh.cpp  RegisterBasicMesh.hpp  RegisterBody.cpp  RegisterBody.hpp  RegisterCommon.cpp  RegisterCommon.hpp  RegisterControls.cpp  RegisterControls.hpp  RegisterGlobals.cpp  RegisterGlobals.hpp  RegisterGraphics.cpp  RegisterGraphics.hpp  RegisterHandles.cpp  RegisterHandles.hpp  RegisterJoint.cpp  RegisterJoint.hpp  RegisterLight.cpp  RegisterLight.hpp  RegisterMath.cpp  RegisterMath.hpp  RegisterParticles.cpp  RegisterParticles.hpp  RegisterPlane.cpp  RegisterPlane.hpp  RegisterReflectance.cpp  RegisterReflectance.hpp  RegisterScaledModel.cpp  RegisterScaledModel.hpp  RegisterScripts.hpp  RegisterShadingVariant.cpp  RegisterShadingVariant.hpp  RegisterStage.cpp  RegisterStage.hpp  RegisterUniforms.cpp  RegisterUniforms.hpp  (+2 more)
engine/editor/: AssimpLoading.cpp  AssimpLoading.hpp
engine/freetype/: Android.mk  clister
engine/gm/PerlMagick/: .gdbinit  Makefile.PL.in  PerlMagickCheck.sh.in
engine/gm/TclMagick/: genconf.sh
engine/gm/coders/: cut.c  gif.c  histogram.c  jnx.c  mpc.c  pdf.c  tga.c  txt.c  wmf.c  xcf.c
engine/gm/config/: Makefile.am
engine/gm/filters/: Makefile.am
engine/gm/magick/: attribute.c  bit_stream.c  composite.c  constitute.c  draw.c  enhance.c  error.c  import.c  magic.c  static.c  transform.c  utility.c
engine/gm/scripts/: rst2htmldeco.py
engine/gm/tests/: bitstream.c  constitute.c  input_bilevel.miff  input_truecolor.miff
engine/gm/wand/: GraphicsMagickWand.pc.in  common.shi  drawing_wand.c  drawtest.c
engine/gm/www/: ChangeLog-2002.html  ChangeLog-2002.rst  ChangeLog-2005.rst  ChangeLog-2009.rst  ChangeLog-2010.rst  Changelog.html  Changes.html  INSTALL-unix.html  INSTALL-windows.rst  download.rst  miff.rst  mission.rst  perl.rst  process.html  quantize.html  reference.html  version.html
engine/graphics-magick/: common.shi.in  rungm.sh.in
engine/graphics-magick/Magick++/: README
engine/graphics-magick/PerlMagick/: Makefile.nt
engine/graphics-magick/TclMagick/: LICENSE  aclocal.m4
engine/graphics-magick/coders/: art.c  miff.c  otb.c  pcl.c  psd.c  tim.c
engine/graphics-magick/magick/: compress.c  effect.c  locale.c  magick.c  omp_data_view.c  random.c  resource.c
engine/graphics-magick/scripts/: html_fragments.py
engine/graphics-magick/tests/: common.shi  input_gray.miff  input_pallette.miff  rwblob.tap  rwfile_sized.tap
engine/graphics-magick/www/: FAQ.html  FAQ.rst  GraphicsMagick.html  Hg.html  authors.rst  (+14 more)
engine/int-hashtable/: FastHashTable.cpp
engine/lib/: get_libs.sh  pull-libs  variant.h
engine/scrapyard/: HACDRenderer.cpp  ModelLoader.cpp  ModelLoader.hpp
engine/utils/: torque6-to-noobwerkz
(+6891 files in other folders)
